Fuck ton of changes

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Search and save recipes containing items that you already have">
+    <meta name="author" content="Dan Starner">
 
     <title>Who's Hungry</title>
 
@@ -42,9 +42,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="http://app.whoshungry.io">Try it!</a>
