--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="https://github.com/Whos-Hungry/dashboard-app/issues">Report Bug</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="http://app.whoshungry.io">Try it!</a>
             </li>
           </ul>
