--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,9 @@
               <a class="nav-link js-scroll-trigger" href="https://github.com/Whos-Hungry/dashboard-app/issues">Report Bug</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="https://drive.google.com/open?id=11BMQg4bJQx-vqZL-GhmbuQpgcHAHiBcTRQCEZcOUYpw">Submit Feedback</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="http://app.whoshungry.io">Try it!</a>
             </li>
           </ul>
