--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link js-scroll-trigger" target="_blank" href="https://github.com/Whos-Hungry/dashboard-app/issues">Report Bug</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" target="_blank" href="https://drive.google.com/open?id=11BMQg4bJQx-vqZL-GhmbuQpgcHAHiBcTRQCEZcOUYpw">Submit Feedback</a>
+              <a class="nav-link js-scroll-trigger" target="_blank" href="https://goo.gl/forms/v5bKDqZGJQ4SOHPI3">Submit Feedback</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="http://app.whoshungry.io">Try it!</a>
